# hello_metal

./: CMakeLists.txt  README.md  kernel.metal  main.mm
